fix context dir

--- a/.github/workflows/docker_push.yml
+++ b/.github/workflows/docker_push.yml
@@ -69,5 +69,5 @@ jobs:
         with:
           platforms: linux/amd64,linux/arm64
           push: true
-          context: docker/
+          context: .
           tags: sjc.ocir.io/tnoff/magic-mirror:latest,sjc.ocir.io/tnoff/magic-mirror:${{ steps.fix-version.outputs.submajor_version }},sjc.ocir.io/tnoff/magic-mirror:${{ steps.fix-full-version.outputs.full_version }}.${{ github.run_number }}
