chore: simplify docker build

--- a/.github/workflows/docker_push.yml
+++ b/.github/workflows/docker_push.yml
@@ -34,78 +34,26 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           custom_tag: ${{ steps.version.outputs.version }}
           tag_prefix: ''
-  build_docker_tag:
-    name: Build Docker Tag
+  push_to_registry:
+    name: Push Docker Image
     runs-on: ubuntu-24.04
     permissions:
       contents: read
-    needs:
-      - tag_build
-    outputs:
-      submajor_version: ${{ steps.fix-version.outputs.submajor_version }}
-      full_version: ${{ steps.fix-full-version.outputs.full_version }}
-    steps:
-      - name: Fix version
-        id: fix-version
-        run: echo "submajor_version=$(echo ${{ needs.tag_build.outputs.version }} | sed -r 's/v([0-9]+)\.([0-9]+)\..*/\1\.\2/')" >> $GITHUB_OUTPUT
-      - name: Fix full version
-        id: fix-full-version
-        run: echo "full_version=$(echo ${{ needs.tag_build.outputs.version }} | sed -r 's/^v//')" >> $GITHUB_OUTPUT
-      - name: Echo submajor version
-        id: echo-submajor
-        run: echo "${{ steps.fix-version.outputs.submajor_version }}"
-      - name: Echo full version
-        id: echo-full
-        run: echo "${{ steps.fix-full-version.outputs.full_version }}.${{ github.run_number }}"
-  push_to_registry_amd:
-    name: Push Docker AMD image to Docker
-    runs-on: ubuntu-24.04
-    permissions:
-      contents: read
-    needs:
-      - tag_build
-      - build_docker_tag
     steps:
       - name: Check out the repo
         uses: actions/checkout@v4
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-      - name: Login to OCIR
-        uses: docker/login-action@v3
+      - name: Install doctl
+        uses: digitalocean/action-doctl@v2
         with:
-          registry: sjc.ocir.io
-          username: ${{ secrets.OCI_USERNAME }}
-          password: ${{ secrets.OCI_TOKEN }}
+          token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
+      - name: Log in to DigitalOcean Container Registry with short-lived credentials
+        run: doctl registry login --expiry-seconds 1200
+      - name: Get github hash
+        id: github-hash
+        run: echo "github_hash=$(echo $GITHUB_SHA | head -c7)" >> $GITHUB_OUTPUT
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
-          platforms: linux/amd64
           push: true
           context: .
-          tags: sjc.ocir.io/tnoff/magic-mirror:latest,sjc.ocir.io/tnoff/magic-mirror:${{ needs.build_docker_tag.outputs.submajor_version }},sjc.ocir.io/tnoff/magic-mirror:${{ needs.build_docker_tag.outputs.full_version }},sjc.ocir.io/tnoff/magic-mirror:${{ needs.build_docker_tag.outputs.full_version }}.${{ github.run_number }}
-  push_to_registry_arm:
-    name: Push Docker ARM image to Docker
-    runs-on: [self-hosted, linux, ARM64]
-    permissions:
-      contents: read
-    needs:
-      - tag_build
-      - build_docker_tag
-    steps:
-      - name: Check out the repo
-        uses: actions/checkout@v4
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-      - name: Login to OCIR
-        uses: docker/login-action@v3
-        with:
-          registry: sjc.ocir.io
-          username: ${{ secrets.OCI_USERNAME }}
-          password: ${{ secrets.OCI_TOKEN }}
-      - name: Build and push
-        uses: docker/build-push-action@v6
-        with:
-          platforms: linux/arm64
-          push: true
-          context: .
-          tags: sjc.ocir.io/tnoff/magic-mirror:latest,sjc.ocir.io/tnoff/magic-mirror:${{ needs.build_docker_tag.outputs.submajor_version }},sjc.ocir.io/tnoff/magic-mirror:${{ needs.build_docker_tag.outputs.full_version }},sjc.ocir.io/tnoff/magic-mirror:${{ needs.build_docker_tag.outputs.full_version }}.${{ github.run_number }}
+          tags: registry.digitalocean.com/${{ secrets.REGISTRY_NAME }}/magic-mirror:latest,registry.digitalocean.com/${{ secrets.REGISTRY_NAME }}/magic-mirror:${{ steps.github-hash.outputs.github_hash }}
