--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -13,12 +13,17 @@ jobs:
     with:
       version_file: ./VERSION
   check_labels:
+    permissions:
+      contents: read
+      pull-requests: read
     uses: tnoff/github-workflows/.github/workflows/check-pr-labels.yml@349eaedd1703a169a996a3ec29b08fb5ffcd528d
     with:
       required_labels: 'build-docker'
       require_all_labels: true
       require_merged: true
   build:
+    permissions:
+      contents: read
     needs: check_labels
     if: needs.check_labels.outputs.conditions_met == 'true'
     uses: tnoff/github-workflows/.github/workflows/ocir-push.yml@1bf1211460f76fcb2c9097a47dc09c1e8d941cc1
